Relax dependencies on instances